add: better cors configuration